--- a/lab08.ipynb
+++ b/lab08.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Przygotuj demo programu znajdującego miejsca zerowe metodą Newtona. Wykorzystując `optparse` ([link](https://docs.python.org/3.6/library/optparse.html)) obsłuż:\n",
+    "Przygotuj demo programu znajdującego miejsca zerowe metodą Newtona. Wykorzystując `argparse` ([link](https://docs.python.org/3.6/library/argparse.html#module-argparse)) lub `optparse` ([link](https://docs.python.org/3.6/library/optparse.html)) obsłuż:\n",
     "- ustalane punktu startowego,\n",
     "- wielkość kroku w pochodnej,\n",
     "- ilość kroków metody,\n",
