--- a/part08.ipynb
+++ b/part08.ipynb
@@ -1872,17 +1872,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Źródła wiedzy o Pythonie"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1891,17 +1880,8 @@
     "- userena (zajęte Wójcik)\n",
     "- django vs. ajax\n",
     "- [https://github.com/django-polymorphic/django-polymorphic](https://github.com/django-polymorphic/django-polymorphic)\n",
-    "- pliki statyczne"
+    "- pliki statyczne + [django-compressor](https://github.com/django-compressor/django-compressor) (Czylok)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
