--- a/part08.ipynb
+++ b/part08.ipynb
@@ -1878,9 +1878,9 @@
     "Zadania na wykład:\n",
     "- formset (zajęte Wójcik)\n",
     "- userena (zajęte Wójcik)\n",
-    "- django vs. ajax\n",
+    "- django vs. ajax (zajęte Bilicki)\n",
     "- [https://github.com/django-polymorphic/django-polymorphic](https://github.com/django-polymorphic/django-polymorphic)\n",
-    "- pliki statyczne + [django-compressor](https://github.com/django-compressor/django-compressor) (Czylok)"
+    "- pliki statyczne + [django-compressor](https://github.com/django-compressor/django-compressor) (zajęte Czylok)"
    ]
   }
  ],
