--- a/lab07.ipynb
+++ b/lab07.ipynb
@@ -53,7 +53,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -148,7 +149,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1769,6 +1771,151 @@
     "    print el\n",
     "```\n",
     "    powinno wyświetlić najpierw `tomek`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "class BagOfWords(object):\n",
+    "    def __init__(self, _text):\n",
+    "        text = _text\n",
+    "        if not type(text)==type(\"\"):\n",
+    "            text = open(text).read()\n",
+    "        self.bag = defaultdict(lambda: 0)\n",
+    "        for word in text.split():\n",
+    "            self.bag[word] += 1\n",
+    "        self.text = text\n",
+    "        \n",
+    "    def sorted_items(self):\n",
+    "        return sorted(self.bag.keys(), reverse=True, key=lambda k: self.bag[k])\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return iter(self.sorted_items())\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \",\".join(str(key) + \":\" + str(self.bag[key]) for key in self.sorted_items())\n",
+    "    \n",
+    "    def __contains__(self, key):\n",
+    "        return key in self.bag\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return BagOfWords(self.text + \" \" + other.text)\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        if key in self.bag.keys():\n",
+    "            return self.bag[key]\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        self.bag[key] = value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ala\n",
+      "ma\n",
+      "kota\n",
+      "ala:3,ma:2,kota:1\n",
+      "3\n",
+      "ala:10,ma:2,kota:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "bag = BagOfWords(\"ala ma kota ala ma ala\")\n",
+    "\n",
+    "for b in bag:\n",
+    "    print(b)\n",
+    "\n",
+    "print(bag)\n",
+    "\n",
+    "print(bag[\"ala\"])\n",
+    "bag[\"ala\"] = 10\n",
+    "print(bag)\n",
+    "\n",
+    "bag[\"ala\"] = bag[\"ala\"] + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mamy ale!\n",
+      "mamy ale!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "if 'ala' in bag:\n",
+    "    print(\"mamy ale!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "ma:3,ala:3,kota:2,tez:1,tomek:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "bow1 = BagOfWords(\"ala ma kota ala ma ala\")\n",
+    "bow2 = BagOfWords(\"tomek tez ma kota\")\n",
+    "bow3 = bow1 + bow2\n",
+    "print('tomek' in bow1) # False\n",
+    "print('tomek' in bow3) # True\n",
+    "print('ala' in bow3) # True\n",
+    "print(bow3) # ala:3, ma:3, kota:2, tez:1, tomek:1"
    ]
   },
   {
