--- a/part10.ipynb
+++ b/part10.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Efektywne programowanie w języku Python \n",
     "\n",
-    "## wykład 8"
+    "## wykład 10"
    ]
   },
   {
@@ -2433,8 +2433,18 @@
     "- https://www.tutorialspoint.com/numpy/\n",
     "- https://www.datacamp.com/community/tutorials/python-numpy-tutorial\n",
     "- https://www.youtube.com/watch?v=h3l4qz76JhQ\n",
-    "- https://www.youtube.com/watch?v=68gDyk3ziIU"
+    "- https://www.youtube.com/watch?v=68gDyk3ziIU\n",
+    "- https://www.youtube.com/watch?v=EEUXKG97YRw"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
