--- a/part11b.ipynb
+++ b/part11b.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -290,14 +290,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a    0.243792\n",
-      "b    0.057053\n",
-      "c    0.827326\n",
-      "i   -0.093550\n",
-      "e   -0.224026\n",
+      "a   -1.305915\n",
+      "b   -0.155206\n",
+      "c   -0.120740\n",
+      "i   -0.356496\n",
+      "e   -0.525657\n",
       "dtype: float64 \n",
       "\n",
-      "0.243791577339 -0.0935503793181\n"
+      "-1.30591478057 -0.356496466338\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -321,8 +321,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.0935503793181\n",
-      "[ 0.24379158  0.05705328  0.82732601 -0.09355038 -0.22402555]\n"
+      "-0.356496466338\n",
+      "[-1.30591478 -0.15520646 -0.12074021 -0.35649647 -0.52565684]\n"
      ]
     },
     {
@@ -343,6 +343,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 128,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -379,12 +380,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.243791577339\n"
+      "-1.30591478057\n",
+      "-1.30591478057\n"
      ]
     }
    ],
    "source": [
-    "print(s.at['a'])"
+    "print(s.at['a'])\n",
+    "print(s.iat[0])"
    ]
   },
   {
@@ -2131,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 130,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2159,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 131,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2193,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 132,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2204,6 +2207,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   one  two\n",
+      "a  1.0  1.0\n",
+      "b  2.0  2.0\n",
+      "c  3.0  3.0\n",
+      "d  NaN  4.0\n",
       "       one       two\n",
       "count  3.0  4.000000\n",
       "mean   2.0  2.500000\n",
@@ -2261,12 +2269,13 @@
        "max    3.0  4.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(df)\n",
     "print(df.describe())\n",
     "df.describe().loc[['count','max']]"
    ]
@@ -3551,13 +3560,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 134,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year     team  wins  losses\n",
+      "0  2010    Bears    11       5\n",
+      "1  2011    Bears     8       8\n",
+      "2  2012    Bears    10       6\n",
+      "3  2011  Packers    15       1\n",
+      "4  2012  Packers    11       5\n",
+      "5  2010    Lions     6      10\n",
+      "6  2011    Lions    10       6\n",
+      "7  2012    Lions     4      12\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3618,12 +3642,13 @@
        "4  2012  Packers    11       5"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(football)\n",
     "football[football.wins > 10]"
    ]
   },
@@ -5464,6 +5489,7 @@
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -6045,15 +6071,17 @@
    },
    "source": [
     "Zadania dla studentów:\n",
-    "- h5py\n",
+    "- h5py (Ruchała)\n",
     "- http://pbpython.com/visualization-tools-1.html\n",
-    "    - Seaborn\n",
-    "    - ggplot\n",
-    "    - Bokeh\n",
-    "    - PyGoogleChart\n",
-    "- Pillow\n",
-    "- scikit-image\n",
-    "- pygame (2 osoby)"
+    "    - Seaborn (Krzyżek)\n",
+    "    - ggplot (Tymorek)\n",
+    "    - Bokeh (Onak)\n",
+    "    - PyGoogleChart (Kijak)\n",
+    "- Pillow (Winnicki, 03.01)\n",
+    "- scikit-image (Krzyżek)\n",
+    "- pygame (2 osoby) (Milowski 10.01, Ananchuk+inna biblioteka go gier 03.01)\n",
+    "- flask (Filar, 17.01)\n",
+    "- macierze (Kijak + Morzydusza, 03.01)"
    ]
   },
   {
