--- a/part07.ipynb
+++ b/part07.ipynb
@@ -548,14 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 1]\n",
+      "[3]\n",
+      "[3, 3]\n",
+      "[3, 3, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "def foo(n, x=[]):\n",
     "    x.append(n)\n",
@@ -569,14 +579,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 1]\n",
+      "[3]\n",
+      "[3]\n",
+      "[3]\n"
+     ]
+    }
+   ],
    "source": [
     "def foo(n, x=None):\n",
     "    if x is None:\n",
@@ -585,8 +605,8 @@
     "    print(x)\n",
     "foo(1, [4]) # => [4, 1]\n",
     "foo(3) # => [3]\n",
-    "foo(3) # => [3, 3]\n",
-    "foo(3) # => [3, 3, 3]"
+    "foo(3) # => [3]\n",
+    "foo(3) # => [3]"
    ]
   },
   {
